adding all to unique file

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <section name='Mandioca'>
         <div name="comCasca">
             <label for="kgsComCasca">Quantidade de Kgs de Mandioca com casca:</label> <br>
-            <input type="number" name="kgsComCasca"> <br>
+            <input type="number" name="kgsComCasca" min="0"> <br>
             <label for="valorComCasca">Valor do Kg da Mandioca com casca:</label> <br>
-            <input type="number" name="valorComCasca">
+            <input type="number" name="valorComCasca" min="0">
         </div>
         <div name="semCasca">
             <label for="kgsSemCasca">Quantidade de Kgs de Mandioca sem casca:</label> <br>
-            <input type="number" name="kgsSemCasca"> <br>
+            <input type="number" name="kgsSemCasca" min="0"> <br>
             <label for="valorSemCasca">Valor do Kg da Mandioca sem casca:</label> <br>
-            <input type="number" name="valorSemCasca">
+            <input type="number" name="valorSemCasca" min="0">
         </div>        
         <button onclick="displayResult()">Calcular</button> 
         <div name="resultadoComCasca"> <br>
@@ -35,15 +35,15 @@
         <div> <br>
             <br>
             <label for="litrosKm"> Informe a quantida de litros consumido por Km do carro:</label>
-            <input type="number" name="litrosKm" value="8"> <br>
+            <input type="number" name="litrosKm" value="8" min="0"> <br>
             <label for="kms"> Informe a quantidade de Kms que sera percorrida:</label>
-            <input type="number" name="kms" value="12">
+            <input type="number" name="kms" value="12" min="0">
             <p>Veja a quantidade de Kms a ser percorrida com ajuda do 
                 <a href=
                 "https://www.google.com.br/maps/dir/R.+Am%C3%A9lia+Pereira+de+Melo+-+Parque+Res.+Vila+Uni%C3%A3o,+Campinas+-+SP,+13060-717,+Brasil//@-22.9344019,-47.1340893,15z/data=!3m1!4b1!4m9!4m8!1m5!1m1!1s0x94c8c83ce8697639:0x88e712513c8e8f62!2m2!1d-47.1253345!2d-22.9344219!1m0!3e0" 
                 target="blank"> google maps</a> </p>             
             <label for="precoLitro"> Informe o valor do litro do combustivel:</label> 
-            <input type="number" name="precoLitro" value="5.22"><br>
+            <input type="number" name="precoLitro" value="5.22" min="0"><br>
             <button onclick="displayResultCombustivel()">Calcular</button> 
             <br>
             <label for="valorCombustivel"> Valor a ser gasto com combustivel é:</label>
@@ -53,13 +53,15 @@
     </section>
     <section name='Mandioca-Combustvel'>
         <br>
-        <button onclick="valoresTotais()">Calcular</button>
-        <label for="totalMandiocaCombustivel"> Total do valor da mandioca + combustivel é:</label>
-        <output id="resultadoMandiocaCombustivel"></output>        
+        <button onclick="valoresTotais()">Calcular Mandioca + Combustivel</button> <br>
+        <label for="totalMandiocaCombustivel"> Total do valor da mandioca com casca + combustivel é:</label>
+        <output id="resultadoMandiocaComCascaCombustivel"></output> <br>
+        <label for="totalMandiocaCombustivel"> Total do valor da mandioca sem casca + combustivel é:</label>
+        <output id="resultadoMandiocaSemCascaCombustivel"></output>           
     </section>
-    <script type="module" src="./index.js"></script>
-    <!-- <script src="./calculoMandioca.js"></script>
-    <script src="./calculoCombustivel.js"></script> 
-    <script type="module" src="./calculaValoresTotais.js"></script> -->
+   <!--<script type="text/javascript" src="index.js"></script>
+     <script src="./calculoMandioca.js"></script>
+     <script src="./calculoCombustivel.js"></script> -->
+    <script src="./calculaValoresTotais.js"></script> 
 </body>
 </html>
